- change to html

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Login</title>
@@ -13,7 +13,7 @@
 
 <body>
     <div class="center">
-        Welcome
+        Welcome <span th:text="#{user.screenName}"></span>
     </div>
 </body>
 
