--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/login.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/login.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="@{~/css/welcome.css}" />
-    <script type="text/javascript" src="@{/{path}/js/jquery-3.4.1.min.js(path=${contextPath})}"></script>
-    <script type="text/javascript" src="${contextPath}/js/jose.min.js"></script>
-    <script type="text/javascript" src="${contextPath}/js/util.js"></script>
-    <script type="text/javascript" src="${contextPath}/js/crypto.js"></script>
-    <script type="text/javascript" src="${contextPath}/js/pbkdf2.js"></script>
-    <script type="text/javascript" src="${contextPath}/js/auth.js"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/welcome.css}" />
+    <script type="text/javascript" th:src="@{/js/jquery-3.4.1.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jose.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/util.js}"></script>
+    <script type="text/javascript" th:src="@{/js/crypto.js}"></script>
+    <script type="text/javascript" th:src="@{/js/auth.js}"></script>
 </head>
 
 <body>
