--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/html/index.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/html/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>$Title$</title>
+    <title>Title</title>
     <meta http-equiv="refresh" content="0; url=login">
 </head>
 <body>
