- change to thymeleaf layout

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="center">
-        Welcome <span th:text="${(user!=null)?user.screenName:''}"></span>
+        Welcome <span th:text="${user!=null}?${user.screenName}:''"></span>
     </div>
 </body>
 
