- change to thymeleaf layout - change log to log4j2

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/login.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/login.html
@@ -47,11 +47,18 @@
     </div>
 
     <script type="text/javascript">
+        let contextRoot = /*[[@{/}]]*/ '';
         $(document).ready(function() {
             $('#submit').bind("click", function() {
                 Authenticator.loginByUnamePasswd($('#txtUsername').val(), $('#txtPassword').val(), function(result) {
                     if (result) {
-                        $(location).prop('href', 'afterLogin?tokenId=' + $('#txtUsername').val());
+                        let uname = $('#txtUsername').val().trim();
+                        let expDate = new Date();
+                        expDate.setTime(expDate.getTime() + (15 * 60 * 1000));
+                        let expires = "; expires=" + expDate.toUTCString();
+                        // document.cookie = encodeURIComponent("tokenId") + "=" + encodeURIComponent(uname) + expires ;//+ "; path="+contextRoot;
+                        document.cookie = encodeURIComponent("tokenId") + "=" + encodeURIComponent(uname)
+                        $(location).prop('href', 'afterLogin');
                     }
                 });
                 return false;
