--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/fragment/app-fragment.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/fragment/app-fragment.html
@@ -6,7 +6,7 @@
 
     <th:block th:fragment="default-home-static-resources">
         <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-        <link rel="stylesheet" type="text/css" th:href="@{/js/welcome.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/welcome.css}"/>
         <script type="text/javascript" th:src="@{/js/auth.js}"></script>
     </th:block>
 </head>
