--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
@@ -2,12 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       th:replace="~{../layout/main-layout :: main-fragment(
-        ~{:: title},
-        ~{:: #home-static-resources},
-        ~{:: #home-header},
-        ~{:: #home-nav},
-        ~{:: #home-main-content},
-        ~{:: #home-footer}
+        title = ~{:: title},
+        mainContent = ~{:: #home-main-content},
     )}">
 <head>
     <title>Welcome</title>
