- default param for fragment

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/auth/welcome.html
@@ -3,8 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       th:replace="~{../layout/main-layout :: main-fragment(
         title = ~{:: title},
-        mainContent = ~{:: #home-main-content},
-    )}">
+        mainContent = ~{:: #home-main-content}
+        )}">
 <head>
     <title>Welcome</title>
     <th:block id="home-static-resources">
