- change to thymeleaf layout - change log to log4j2 - config java session to db, change session id name, cache user

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-basic.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-basic.html
@@ -1,20 +1,10 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: harryng
-  Date: 4/22/20
-  Time: 22:45
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org">
 <head>
     <title>Web Socket basic chat</title>
-<%--    <link href="<c:url value='/css/socketio.css'/>" rel="stylesheet" type="text/css"/>--%>
-    <script src="<c:url value='/js/jquery-3.4.1.min.js'/>"></script>
-<%--    <script src="<c:url value='/js/socket.io.js'/>"></script>--%>
-</head>
+<!--    <link th:href="@{/css/socketio.css}" rel="stylesheet" type="text/css"/>-->
+    <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
+<!--    <script th:src="@{/js/socket.io.js}"></script>-->
 <body>
 <ul id="messages"></ul>
 <form id="chat-form" action="">
