--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/fragment/nav-fragment.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/fragment/nav-fragment.html
@@ -7,9 +7,10 @@
 <body>
 <!-- Default Navigator -->
 <ul th:fragment="nav-default">
-    <li><a th:href="@{/}">Home</a></li>
-    <li><a th:href="@{/products}">Products</a></li>
-    <li><a th:href="@{/about}">About</a></li>
+    <li><a th:href="@{/}" th:text="#{nav.home}"></a></li>
+    <li><a th:href="@{/products}" th:text="#{nav.product}"></a></li>
+    <li><a th:href="@{/about}" th:text="#{nav.about}"></a></li>
+    <li><a th:href="@{/logout}" th:text="#{nav.logout}"></a></li>
 </ul>
 </body>
 </html>
