--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-stomp2.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-stomp2.html
@@ -1,39 +1,26 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: harryng
-  Date: 4/22/20
-  Time: 22:45
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Web Socket STOMP chat</title>
-    <%--    <link href="<c:url value='/css/socketio.css'/>" rel="stylesheet" type="text/css"/>--%>
-    <script src="<c:url value='/js/jquery-3.4.1.min.js'/>"></script>
-    <script src="<c:url value='/js/sockjs.min.js'/>"></script>
-    <script src="<c:url value='/js/stomp.min.js'/>"></script>
-    <%--    <script src="<c:url value='/js/socket.io.js'/>"></script>--%>
+    <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{/js/sockjs.min.js}"></script>
+    <script th:src="@{/js/stomp.min.js}"></script>
 </head>
 <body onload="disconnect()">
 <div>
     <div>
-        <input type="text" id="from" placeholder="Choose a nickname"/><br/>
-        <input type="text" id="txtTo" placeholder="To"/><br/>
+        <input type="text" id="from" th:placeholder="#{ws.chooseANickname}"/><br/>
+        <input type="text" id="txtTo" th:placeholder="#{ws.to}"/><br/>
     </div>
     <br/>
     <div>
-        <button id="connect" onclick="connect();">Connect</button>
-        <button id="disconnect" disabled="disabled" onclick="disconnect();">
-            Disconnect
-        </button>
+        <button id="connect" onclick="connect();" th:text="#{ws.connect}"></button>
+        <button id="disconnect" disabled="disabled" onclick="disconnect();" th:text="#{ws.disconnect}"></button>
     </div>
     <br/>
     <div id="conversationDiv">
-        <input type="text" id="text" placeholder="Write a message..."/>
-        <button id="sendMessage" onclick="sendMessage();">Send</button>
+        <input type="text" id="text" th:placeholder="#{ws.writeAMessage}"/>
+        <button id="sendMessage" onclick="sendMessage();" th:text="#{ws.send}"></button>
         <p id="response"></p>
     </div>
 </div>
