- change to thymeleaf layout - change log to log4j2 - config java session to db, change session id name, cache user - resolve i18n - test socket upload file, send media

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/fragment/nav-fragment.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/fragment/nav-fragment.html
@@ -8,7 +8,7 @@
 <!-- Default Navigator -->
 <ul th:fragment="nav-default">
     <li><a th:href="@{/}" th:text="#{nav.home}"></a></li>
-    <li><a th:href="@{/products}" th:text="#{nav.product}"></a></li>
+    <li><a th:href="@{/websocket/ws-stomp/auth}" th:text="#{nav.chat}"></a></li>
     <li><a th:href="@{/about}" th:text="#{nav.about}"></a></li>
     <li><a th:href="@{/logout}" th:text="#{nav.logout}"></a></li>
 </ul>
