--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-handler.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-handler.html
@@ -1,19 +1,9 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: harryng
-  Date: 4/22/20
-  Time: 22:45
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Web Socket handler chat</title>
-<%--    <link href="<c:url value='/css/socketio.css'/>" rel="stylesheet" type="text/css"/>--%>
-    <script src="<c:url value='/js/jquery-3.4.1.min.js'/>"></script>
-<%--    <script src="<c:url value='/js/socket.io.js'/>"></script>--%>
+    <link th:href="@{/css/socketio.css}" rel="stylesheet" type="text/css"/>
+    <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{/js/socket.io.js}"></script>
 </head>
 <body>
 <ul id="messages"></ul>
@@ -21,8 +11,8 @@
     <table>
         <tr>
             <td colspan="2">
-                <input type="text" id="username" placeholder="Username"/>
-                <button type="button" onclick="connect();" >Connect</button>
+                <input type="text" id="username" th:placeholder="#{ws.username}"/>
+                <button type="button" onclick="connect();" th:text="#{ws.connect}"></button>
             </td>
         </tr>
         <tr>
@@ -32,8 +22,8 @@
         </tr>
         <tr>
             <td>
-                <input type="text" size="51" id="msg" placeholder="Message"/>
-                <button type="button" onclick="send();" >Send</button>
+                <input type="text" size="51" id="msg" th:placeholder="#{ws.writeAMessage}"/>
+                <button type="button" onclick="send();" th:text="#{ws.send}"></button>
             </td>
         </tr>
     </table>
