--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-stomp-auth.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/pages/ws/ws-stomp-auth.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Web Socket STOMP chat</title>
+    <link th:href="@{/css/socketio.css}" rel="stylesheet" type="text/css"/>
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/js/sockjs.min.js}"></script>
     <script th:src="@{/js/stomp.min.js}"></script>
@@ -8,35 +9,44 @@
 <body onload="disconnect()">
 <div>
     <div>
-        <input type="text" id="from" th:placeholder="#{ws.chooseANickname}"/><br/>
+        <div th:text="${user.screenName}"></div><br/>
+        <input type="text" id="from" th:placeholder="#{ws.chooseANickname}" th:value="${user.screenName}"/><br/>
         <input type="text" id="txtTo" th:placeholder="#{ws.to}"/><br/>
     </div>
     <br/>
     <div>
-        <button id="connect" onclick="connect();">Connect</button>
-        <button id="disconnect" disabled="disabled" onclick="disconnect();">
-            Disconnect
-        </button>
+        <button id="connect" onclick="connect();" th:text="#{ws.connect}"></button>
+        <button id="disconnect" disabled="disabled" onclick="disconnect();" th:text="#{ws.disconnect}"></button>
     </div>
     <br/>
     <div id="conversationDiv">
-        <input type="text" id="text" placeholder="Write a message..."/>
-        <button id="sendMessage" onclick="sendMessage();">Send</button>
+        <div id="content" class="chat-content"></div>
+        <br/>
+        <div id="message" class="chat-message" contenteditable="true" th:placeholder="#{ws.writeAMessage}"></div>
+        <br/>
+        <input id="fileChoose" type="file" hidden="hidden"/>
+        <a id="lnkFileChoose" href="javascript:clickUploadLink(this);" th:text="#{ws.selectFile}"></a>
+        <br/><br/>
+        <button id="sendMessage" onclick="sendMessage();" th:text="#{ws.send}">Send</button>
         <p id="response"></p>
     </div>
 </div>
 <script type="text/javascript">
     let stompClient = null;
     let sockEndpoint = "/web/ws/chat";
-    let sendEndpoint = "/app/ws/chat/user";
-    let listenEndpoint = "/queue/messages";
-    // let listenEndpoint = "/topic/messages";
+    let sendMsgEndpoint = "/app/ws/chat/user";
+    let sendFileEndpoint = "/app/ws/chat/user";
+    let listenMsgEndpoint = "/queue/messages";
+    let listenFileEndpoint = "/queue/files";
+    let uploadBufferSize = 16;
+
+
 
     function setConnected(connected) {
         document.getElementById('connect').disabled = connected;
         document.getElementById('disconnect').disabled = !connected;
         document.getElementById('conversationDiv').style.visibility = connected ? 'visible' : 'hidden';
-        document.getElementById('response').innerHTML = '';
+        document.getElementById('content').innerHTML = '';
     }
 
     function connect() {
@@ -46,8 +56,9 @@
             setConnected(true);
             let from = document.getElementById('from').value;
             console.log('Connected: ' + frame);
-            stompClient.subscribe(listenEndpoint + "/", receivedMessage);
-            stompClient.subscribe(listenEndpoint + "/" + from, receivedMessage);
+            stompClient.subscribe(listenMsgEndpoint + "/", receivedMessage);
+            stompClient.subscribe(listenMsgEndpoint + "/" + from, receivedMessage);
+            stompClient.subscribe(listenFileEndpoint + "/" + from, notifySendFile);
         });
     }
 
@@ -64,25 +75,71 @@
         showMessageOutput(JSON.parse(messageOutput.body));
     }
 
+    function notifySendFile(msg) {
+
+    }
+
     function sendMessage() {
         let from = document.getElementById('from').value;
         let to = document.getElementById("txtTo").value;
-        let text = document.getElementById('text').value;
-        let msg = JSON.stringify({'from': from, "to": to, 'content': text});
-        stompClient.send(sendEndpoint, {}, msg);
+        let data = document.getElementById('text').value;
+        let msg = JSON.stringify({'from': from, "to": to, type:"text", 'content': data});
+        stompClient.send(sendMsgEndpoint, {}, msg);
         document.getElementById("text").value = "";
     }
 
+    function sendFile(file) {
+        let from = document.getElementById('from').value;
+        let to = document.getElementById("txtTo").value;
+        let fileReader = new FileReader();
+        fileReader.onloadstart = (e) => {
+            console.log("on load start");
+        };
+        fileReader.onloadend = (e) => {
+            console.log("on load end");
+        };
+        fileReader.onerror = (e) => {
+            console.log("on error");
+        };
+        fileReader.onload = (e) => {
+            console.log("on load");
+            let dataBuff = null;
+            let evtBuff = e.target.result;
+            let msg = null;
+            for(let i = 0;i < evtBuff.byteLength; i += uploadBufferSize){
+                dataBuff = evtBuff.slice(i, i + uploadBufferSize);
+                msg = JSON.stringify({'from': from, "to": to, type:"file-part",'content': dataBuff});
+                $("#response").html(msg);
+            }
+        };
+        fileReader.onprogress = (e) => {
+            console.log("on progress");
+        };
+        fileReader.readAsArrayBuffer(file);
+    }
+
+    function clickUploadLink(that){
+        $("#fileChoose:hidden").trigger('click');
+    }
+
     function showMessageOutput(messageOutput) {
-        let response = document.getElementById('response');
+        let chatContent = document.getElementById('chatContent');
         let text = document.createTextNode(
             messageOutput.from + " to " + messageOutput.to + ": "
             + messageOutput.content + " (" + messageOutput.time + ")");
         let p = document.createElement('p');
         p.style.wordWrap = 'break-word';
         p.appendChild(text);
-        response.appendChild(p);
+        chatContent.appendChild(p);
     }
+
+    $(document).ready(function () {
+        $("#fileChoose:hidden").change((e) => {
+            if(e.target && e.target.files.length > 0){
+                sendFile(e.target.files[0]);
+            }
+        })
+    });
 </script>
 </body>
 </html>
